--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,20 @@
-/* Add CSS Styling */
+.css {
+    background-color:rgba(255, 50, 64, 0.833);
+    font-family: Verdana, DejaVu Sans, sans-serif;
+}
+
+.raul {
+    font-size: 24px;
+}
+
+
+#loco {
+    color: #0099ff97;
+    font-size: 36px;
+}
+
+#gripa {
+    background-color: #00ff0dd0;
+    
+    font-weight: 700;
+}
